# Synacor

./: .gitignore  Cargo.toml  Required modifications  test_program.txt
scratchpad/: decomp.txt  recomp.c
spoilers/: actions.txt  actions_modified.txt  spoilers.md
src/: instruction.rs  instruction_tracker.rs  interface.rs  machine.rs  main.rs  startup.rs  static_analysis.rs  thread_interface.rs  ui.rs  ui_components.rs
src/binmod/: main.rs
src/bruteforce/: main.rs
src/route/: main.rs  room_map.rs
