[package]
name = "synapone"
version = "0.1.0"
edition = "2021"
default-run = "main"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circular-buffer = "0.1.7"
clap = {version="4.5.18", features=["derive"]}
crossterm = "0.27.0"
itertools = "0.9.*"
jemallocator = "0.5.4"
ratatui = "0.26.1"
rayon = "1.11.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "bruteforce"
path = "src/bruteforce/main.rs"

[[bin]]
name = "binmod"
path = "src/binmod/main.rs"

[[bin]]
name = "routefinder"
path = "src/route/main.rs"